syntax = "proto3";

import "cloud/dataplatform/api/connman/common.proto";

option go_package = "a.yandex-team.ru/cloud/dataplatform/api/connman";

package yandex.cloud.priv.connman.v1;


message PostgreSQLAuth {
    oneof security {
        UserPasswordAuth user_password = 1;
    }
}
message PostgreSQLCluster {
    repeated string hosts = 1;
    int64 port = 2;
    TLSParams tls_params = 3;
}
message PostgreSQLConnection {
    oneof connection {
        PostgreSQLCluster on_premise = 1;
        string managed_cluster_id = 2;
    }
    PostgreSQLAuth auth = 4;
}
